# mazemaze-fedi

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
api-bluesky/: .gitignore  README.md  package.json  rescript.json  tsconfig.json
api-bluesky/melange/: ComponentSchemas.jsdoc.json  ComponentSchemas.ml  Endpoints.jsdoc.json  Endpoints.ml  dune
api-bluesky/scripts/: write-endpoints-dts.mjs
api-bluesky/specs/: schema.json
api-bluesky/src/: Bluesky.d.ts  Bluesky.js  Bluesky.ts
api-bluesky/test/: smoke.mjs
api-hackerspub/: README.md  package.json  rescript.json  tsconfig.json
api-hackerspub/melange/: ComponentSchemas.jsdoc.json  ComponentSchemas.ml  Endpoints.jsdoc.json  Endpoints.ml
api-hackerspub/scripts/: generate-melange.sh
api-hackerspub/src/: HackersPub.d.ts  HackersPub.js  HackersPub.ts
api-hackerspub/test/: smoke.mjs
api-mastodon/: README.md  package.json  rescript.json  tsconfig.json
api-mastodon/melange/: ComponentSchemas.jsdoc.json  ComponentSchemas.ml  Endpoints.jsdoc.json  Endpoints.ml
api-mastodon/scripts/: annotate.mjs  build-melange.sh  generate-melange.sh  write-types.mjs
api-mastodon/src/: Mastodon.d.ts  Mastodon.js  (+1 more)
api-misskey/: .gitignore  README.md  package-lock.json  package.json  rescript.json
api-misskey/melange/: ComponentSchemas.jsdoc.json  ComponentSchemas.ml  Endpoints.jsdoc.json  Endpoints.ml  dune  dune-project
generator/: .gitignore  NEXT.md  README.md  build.sh  consumer.ts  dune  package-lock.json  package.json  run-endpoint.mjs  run.mjs  tsconfig.json
generator/.github/workflows/: ci.yml
generator/examples/: README.md
generator/examples/melange/: Example.ml
generator/examples/rescript/: Example.res
generator/examples/typescript/: example.ts  tsconfig.json
generator/gql-spike/: componentSchemas.ml  dune  endpoints.ml  ops.json  union.json
generator/gql-spike/union/: componentSchemas.ml  dune  endpoints.ml
generator/graphql-probe/: normalized.json  probe.mjs
generator/graphql-probe/operations/: ActorByHandle.graphql  AddReaction.graphql  PublicTimeline.graphql
generator/kaguya-probe/: probe.ts  tsconfig.json
generator/ml/: dune
generator/res/: rescript.json
generator/test/: decode.mjs  res_roundtrip.mjs  run.sh
generator/test/fixtures/: note.min.json  userDetailedNotMe.min.json  userLite.null.json
umbrella/: README.md  components.d.ts  endpoints.d.ts  index.d.ts  melange-components.mjs  melange-endpoints.d.ts  package.json
(+44 files in other folders)
